# wave_tracer

./: .gitattributes  .gitignore  .gitmodules  BUILD.md  CMakeLists.txt  CNAME  LICENSE  README.md  TODO.md  bib.html  cli.html  genindex.html  icon.icns  index.html  objects.inv  search.html  searchindex.js  theory.html  units.html  vcpkg.json  wt_gdb_prettyprinter.py
.github/workflows/: build_test_clang17.yaml  build_test_clang18.yaml  build_test_clang20.yaml  build_test_gcc.yaml  build_test_gcc_dbl.yaml  build_test_msvc.yaml  docs.yaml
_sources/: bib.rst.txt  index.rst.txt
_sources/ads/: bvh8w.rst.txt
_sources/api/: classwt_1_1ads_1_1ads__t.rst.txt  classwt_1_1ads_1_1bvh8w__t.rst.txt  classwt_1_1ads_1_1bvh__t.rst.txt  classwt_1_1ads_1_1construction_1_1ads__constructor__t.rst.txt  classwt_1_1ads_1_1construction_1_1bvh8w__constructor__t.rst.txt  classwt_1_1ads_1_1construction_1_1bvh__constructor__t.rst.txt  classwt_1_1beam_1_1beam__generic__t.rst.txt  classwt_1_1beam_1_1gaussian__wavefront__t.rst.txt  classwt_1_1beam__t.rst.txt  classwt_1_1binned__piecewise__linear__distribution__t.rst.txt  classwt_1_1bitmap_1_1bitmap__t.rst.txt  classwt_1_1bitmap_1_1texture2d__t.rst.txt  classwt_1_1bitmap_1_1texture2d__tmpl__t.rst.txt  classwt_1_1bsdf_1_1bsdf__t.rst.txt  classwt_1_1bsdf_1_1composite__t.rst.txt  classwt_1_1bsdf_1_1dielectric__t.rst.txt  classwt_1_1bsdf_1_1diffuse__t.rst.txt  classwt_1_1bsdf_1_1mask__t.rst.txt  classwt_1_1bsdf_1_1normalmap__t.rst.txt  classwt_1_1bsdf_1_1scale__t.rst.txt  classwt_1_1bsdf_1_1surface__spm__t.rst.txt  classwt_1_1bsdf_1_1two__sided__t.rst.txt  classwt_1_1discrete__distribution__t.rst.txt  classwt_1_1discrete__distribution__t_3_01vec2__t_01_4.rst.txt  classwt_1_1distribution1d__t.rst.txt  classwt_1_1elliptic__cone__t.rst.txt  classwt_1_1emitter_1_1area__t.rst.txt  classwt_1_1emitter_1_1directional__t.rst.txt  classwt_1_1emitter_1_1emitter__t.rst.txt  classwt_1_1emitter_1_1infinite__emitter__t.rst.txt  classwt_1_1emitter_1_1point__t.rst.txt  classwt_1_1emitter_1_1spot__t.rst.txt  classwt_1_1encoded__normal__t.rst.txt  classwt_1_1font__renderer__t.rst.txt  classwt_1_1frame__t.rst.txt  classwt_1_1fraunhofer_1_1free__space__diffraction__t.rst.txt  classwt_1_1fraunhofer_1_1fsd__sampler_1_1fsd__lut__t.rst.txt  classwt_1_1fraunhofer_1_1fsd__sampler_1_1fsd__sampler__t.rst.txt  classwt_1_1free__space__diffraction__t.rst.txt  classwt_1_1gaussian1d__t.rst.txt  (+2433 more)
_sources/scenes/: scene.rst.txt  shape.rst.txt
ads/: ads.html  bvh8w.html
api/: classwt_1_1ads_1_1ads__t.html  classwt_1_1ads_1_1bvh8w__t.html  classwt_1_1ads_1_1bvh__t.html  classwt_1_1ads_1_1construction_1_1ads__constructor__t.html  classwt_1_1ads_1_1construction_1_1bvh8w__constructor__t.html  classwt_1_1ads_1_1construction_1_1bvh__constructor__t.html  classwt_1_1beam_1_1beam__generic__t.html  classwt_1_1beam_1_1gaussian__wavefront__t.html  classwt_1_1beam__t.html  classwt_1_1binned__piecewise__linear__distribution__t.html  classwt_1_1bitmap_1_1bitmap__t.html  classwt_1_1bitmap_1_1texture2d__t.html  classwt_1_1bitmap_1_1texture2d__tmpl__t.html  classwt_1_1bsdf_1_1bsdf__t.html  classwt_1_1bsdf_1_1composite__t.html  classwt_1_1bsdf_1_1dielectric__t.html  classwt_1_1bsdf_1_1diffuse__t.html  classwt_1_1bsdf_1_1mask__t.html  classwt_1_1bsdf_1_1normalmap__t.html  classwt_1_1bsdf_1_1scale__t.html  classwt_1_1bsdf_1_1surface__spm__t.html  classwt_1_1bsdf_1_1two__sided__t.html  classwt_1_1discrete__distribution__t.html  classwt_1_1discrete__distribution__t_3_01vec2__t_01_4.html  classwt_1_1distribution1d__t.html  classwt_1_1elliptic__cone__t.html  classwt_1_1emitter_1_1area__t.html  classwt_1_1emitter_1_1directional__t.html  classwt_1_1emitter_1_1emitter__t.html  classwt_1_1emitter_1_1infinite__emitter__t.html  classwt_1_1emitter_1_1point__t.html  classwt_1_1emitter_1_1spot__t.html  classwt_1_1encoded__normal__t.html  classwt_1_1font__renderer__t.html  classwt_1_1frame__t.html  classwt_1_1fraunhofer_1_1free__space__diffraction__t.html  classwt_1_1fraunhofer_1_1fsd__sampler_1_1fsd__lut__t.html  classwt_1_1fraunhofer_1_1fsd__sampler_1_1fsd__sampler__t.html  classwt_1_1free__space__diffraction__t.html  classwt_1_1gaussian1d__t.html  (+2434 more)
data/emission/: 2469_LED_CREE_BR30.yml  2470_LED_Ledtech_PAR20.yml  2471_LED_Philips_CandleLight.yml  2472_INC_Sylvania_A21.yml  2473_LED_EnergySmart_PAR38.yml  2474_LED_Ledtech_PAR20.yml  2475_INC_Rona_A19.yml  2476_LED_Philips_BR40.yml  2477_LED_EnergySmart_PAR30.yml  2478_LED_Philips_CandleLight B11.yml  2480_Halo_Globe_BR30.yml  2481_MH_null_Venture.yml  2482_CFL_Globe_Twister.yml  2485_LED_EnergySmart_PAR38.yml  2486_LED_Philips_A19.yml  2487_LED_Philips_PAR20 Flood.yml  2488_CFL_Globe_Twister.yml  2489_LED_Philips_Blue-Golite-P1-Apollo 1750Lux.yml  2490_LED_EnergySmart_PAR20.yml  2492_LED_EnergySmart_BR30.yml  (+291 more)
docs/: .gitignore  CMakeLists.txt  Doxyfile.in  requirements.txt
docs/source/: bibtex.bib  cli.rst  conf.py  index.rst  theory.rst  units.rst
docs/source/_static/css/: custom.css
docs/source/_templates/sidebar/: brand.html
docs/source/ads/: ads.rst
docs/source/scenes/: loader.rst  transformation.rst
docs/source/scenes/bsdfs/: bsdf.rst  composite.rst  normalmap.rst  two_sided.rst
docs/source/scenes/emitters/: spot.rst
docs/source/scenes/integrators/: integrator.rst  plt_path.rst
docs/source/scenes/samplers/: sampler.rst  sobolld.rst  uniform.rst
docs/source/scenes/sensors/: sensor.rst  tonemap.rst
docs/source/scenes/sensors/response_functions/: RGB.rst  multichannel.rst
docs/source/scenes/sensors/sensors/: perspective_polarimetric.rst  perspective_scalar.rst  sensor.rst  virtual_plane_sensor.rst
docs/source/scenes/spectra/: analytic.rst  binned.rst  complex_analytic.rst  composite.rst  function.rst  gaussian.rst  spectrum.rst
docs/source/scenes/surface_profiles/: dirac.rst  fractal.rst  gaussian.rst
docs/source/scenes/textures/: bitmap.rst  constant.rst  function.rst  mix.rst  quantity.rst  texture.rst
scenes/: LICENSE.txt  README.md  loader.html  scene.html  shape.html  transformation.html
src/: main.cpp  static_tests.cpp  version.cpp
(+3877 files in other folders)
